Add pymupdf-layout for GNN-powered PDF layout analysis

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "click>=8.0",
     "pypandoc>=1.11",
     "pymupdf4llm>=0.0.5",
+    "pymupdf-layout>=1.0.0",
     "rich>=13.0",
 ]
 
